--- a/_posts/2024-09-20-Matrix.md
+++ b/_posts/2024-09-20-Matrix.md
@@ -1,3 +1,7 @@
+---
+date: 2024-09-20
+categories: [Linux, Medium]
+---
 
 ![3304ba87b70a76097c273224eb54e91d32e953ac](https://github.com/user-attachments/assets/7a56e4de-d32e-4f0f-9c17-bb343d74fd08)
 
