--- a/_posts/2024-09-21-Liar.md
+++ b/_posts/2024-09-21-Liar.md
@@ -1,3 +1,7 @@
+---
+date: 2024-09-21
+categories: [Windows, Easy]
+---
 
 ![liar](https://github.com/user-attachments/assets/239fa3ab-3325-4dc4-987d-d3a5944965c7)
 
