--- a/_posts/2024-09-21-Matrix2.md
+++ b/_posts/2024-09-21-Matrix2.md
@@ -1,3 +1,7 @@
+---
+date: 2024-09-21
+categories: [Linux, Medium]
+---
 
 ![0445d14e4e2fb7114abb336ec9d8a2cf5ed84566](https://github.com/user-attachments/assets/2fcb4641-5c46-4d88-a820-f1115d958918)
 
