--- a/_posts/2024-11-18-DC02.md
+++ b/_posts/2024-11-18-DC02.md
@@ -1,3 +1,7 @@
+---
+date: 2024-11-18
+categories: [Windows, Medium, AD]
+---
 
 ![dc02](https://github.com/user-attachments/assets/51f02db3-68ff-4ca1-a504-8cbff7c05ab8)
 
