--- a/_posts/2024-11-23-DC03.md
+++ b/_posts/2024-11-23-DC03.md
@@ -1,3 +1,7 @@
+---
+date: 2024-11-23
+categories: [Windows, Medium, AD]
+---
 
 ![dc03](https://github.com/user-attachments/assets/b242b6e1-5628-4c81-96fb-8816303b908e)
 
