--- a/_posts/2025-02-03-Active.md
+++ b/_posts/2025-02-03-Active.md
@@ -1,3 +1,8 @@
+---
+date: 2025-02-03
+categories: [Windows, Easy, AD]
+---
+
 ![Active](https://labs.hackthebox.com/storage/avatars/5837ac5e28291146a9f2a8a015540c28.png)
 
 ---
