--- a/_posts/2025-02-03-Keeper.md
+++ b/_posts/2025-02-03-Keeper.md
@@ -1,3 +1,8 @@
+---
+date: 2025-02-03
+categories: [Linux, Easy]
+---
+
 ![KeeperForest](https://labs.hackthebox.com/storage/avatars/b56a5742b99e2568fa167765b1323370.png)
 
 ---
