--- a/_posts/2025-02-03-Sauna.md
+++ b/_posts/2025-02-03-Sauna.md
@@ -1,3 +1,8 @@
+---
+date: 2025-02-03
+categories: [Windows, Easy, AD]
+---
+
 ![Sauna](https://labs.hackthebox.com/storage/avatars/f31d5d0264fadc267e7f38a9d7729d14.png)
 
 ---
