--- a/_posts/2025-02-15-Cicada.md
+++ b/_posts/2025-02-15-Cicada.md
@@ -1,3 +1,8 @@
+---
+date: 2025-02-15
+categories: [Windows, Easy, AD]
+---
+
 ![Cicada](https://labs.hackthebox.com/storage/avatars/79616a32a057e5e672dadb51bb96dd04.png)
 
 ---
