--- a/_posts/2025-02-28-Escape.md
+++ b/_posts/2025-02-28-Escape.md
@@ -1,3 +1,8 @@
+---
+date: 2025-02-28
+categories: [Windows, Medium, AD]
+---
+
 ![Escape](https://labs.hackthebox.com/storage/avatars/80936664b3da83a92b28602e79e47d79.png)
 
 ---
