--- a/_posts/2025-03-01-ServMon.md
+++ b/_posts/2025-03-01-ServMon.md
@@ -1,3 +1,8 @@
+---
+date: 2025-03-01
+categories: [Windows, Easy]
+---
+
 ![ServMon](https://labs.hackthebox.com/storage/avatars/2bc1a8dc04b09b8ac2db694f25ccf051.png)
 
 ---
