--- a/_posts/2025-03-02-Jeeves.md
+++ b/_posts/2025-03-02-Jeeves.md
@@ -1,3 +1,8 @@
+---
+date: 2025-03-02
+categories: [Windows, Medium]
+---
+
 ![Jeeves](https://labs.hackthebox.com/storage/avatars/709059a710d3d6ff1ba32bf0729ecbb8.png)
 
 ---
