--- a/_posts/2025-03-02-UpDown.md
+++ b/_posts/2025-03-02-UpDown.md
@@ -1,3 +1,8 @@
+---
+date: 2025-03-02
+categories: [Linux, Medium]
+---
+
 ![UpDown](https://labs.hackthebox.com/storage/avatars/d7a56d5f25100d0a918b90de80122f82.png)
 
 ---
