--- a/_posts/2025-03-15-StreamIO.md
+++ b/_posts/2025-03-15-StreamIO.md
@@ -1,3 +1,8 @@
+---
+date: 2025-03-15
+categories: [Windows, Medium, AD]
+---
+
 ![StreamIO](https://labs.hackthebox.com/storage/avatars/21240942d301a96e80574353a96b9003.png)
 
 ---
