--- a/_posts/2025-03-20-Magic.md
+++ b/_posts/2025-03-20-Magic.md
@@ -1,3 +1,8 @@
+---
+date: 2025-03-20
+categories: [Windows, Medium]
+---
+
 ![Magic](https://labs.hackthebox.com/storage/avatars/73eebbbdfbbfd46258ea2ae7e52d9479.png)
 
 ---
