--- a/_posts/2025-03-23-Alert.md
+++ b/_posts/2025-03-23-Alert.md
@@ -1,3 +1,8 @@
+---
+date: 2025-03-23
+categories: [Linux, Easy]
+---
+
 ![Alert](https://labs.hackthebox.com/storage/avatars/6f4647030d6aadc676b8d8a459de344f.png)
 
 ---
