--- a/_posts/2025-03-26-Cascade.md
+++ b/_posts/2025-03-26-Cascade.md
@@ -1,3 +1,8 @@
+---
+date: 2025-03-26
+categories: [Windows, Medium, AD]
+---
+
 ![Cascade](https://labs.hackthebox.com/storage/avatars/64fef851357b8de1c4834093bf3426f2.png)
 
 ---
