--- a/_posts/2025-04-12-Sau.md
+++ b/_posts/2025-04-12-Sau.md
@@ -1,3 +1,8 @@
+---
+date: 2025-04-12
+categories: [Linux, Easy]
+---
+
 ![Sau](https://labs.hackthebox.com/storage/avatars/1ea2980b9dc2d11cf6a3f82f10ba8702.png)
 
 ---
