--- a/_posts/2025-04-17-Pandora.md
+++ b/_posts/2025-04-17-Pandora.md
@@ -1,3 +1,8 @@
+---
+date: 2025-04-17
+categories: [Linux, Easy]
+---
+
 ![Pandora](https://labs.hackthebox.com/storage/avatars/6ac0e76002774bbfac92b0dbc86cb6af.png)
 
 ---
