--- a/_posts/2025-04-18-Access.md
+++ b/_posts/2025-04-18-Access.md
@@ -1,3 +1,8 @@
+---
+date: 2025-04-18
+categories: [Windows, Easy]
+---
+
 ![Access](https://labs.hackthebox.com/storage/avatars/adef7ad3d015a1fbc5235d5a201ca7d1.png)
 
 ---
