--- a/_posts/2024-11-17-DC01.md
+++ b/_posts/2024-11-17-DC01.md
@@ -1,3 +1,7 @@
+---
+date: 2024-11-17
+categories: [Windows, Easy, AD]
+---
 
 ![dc01](https://github.com/user-attachments/assets/a46c6940-1c1b-4d61-ac21-f18575faa46d)
 
