--- a/_posts/2025-01-30-Forest.md
+++ b/_posts/2025-01-30-Forest.md
@@ -1,3 +1,8 @@
+---
+date: 2025-01-30
+categories: [Windows, Easy, AD]
+---
+
 ![Forest](https://labs.hackthebox.com/storage/avatars/7dedecb452597150647e73c2dd6c24c7.png)
 
 ---
