--- a/_posts/2025-03-02-Busqueda.md
+++ b/_posts/2025-03-02-Busqueda.md
@@ -1,3 +1,8 @@
+---
+date: 2025-03-02
+categories: [Linux, Easy]
+---
+
 ![Busqueda](https://labs.hackthebox.com/storage/avatars/a6942ab57b6a79f71240420442027334.png)
 
 ---
